fix something on stretch

--- a/stretch/css/index.css
+++ b/stretch/css/index.css
@@ -76,8 +76,11 @@ h1, h2, h3, h4, h5 {
 
 .navigation{
 	/* height: 80px; */
-	background-color: #fff;
+	background-color: rgba(255, 192, 203, 0.728);
 	color: gray;
+	position: fixed; /* Set the navbar to fixed position */
+  	top: 0; /* Position the navbar at the top of the page */
+  	width: 70%; 
 }
 
 .navigation a {
@@ -111,8 +114,10 @@ button{
 }
 
 .row {
-	background-color: white;
+
+	padding-top: 100px;
 	/* height: 500px; */
+	/* margin-top: 100px; */
 }
 
 .row .l_col, .r_col{
@@ -133,7 +138,8 @@ button{
 }
 
 h1 {
-	font-size: 60px;
+	font-size: 70px;
+	font-family: 'Odibee Sans', cursive;
 }
 
 
